--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,17 @@ Thumbs.db
 # Archivos temporales
 *.log
 *.tmp
+
+# Node.js y JavaScript
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+.npm
+.yarn
+
+# Build outputs
+dist/
+build/
+.cache/
